--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -32,21 +32,13 @@
                         <td>{{ row.name }}</td>
                     </tr>
                 {% endfor %}
-
-                    <tr>
-                        <td colspan="3" class="text-center">
-                            <p class="lead">{{ "No VeNom Sets Installed"|xlt }}</p>
-                        </td>
-                    </tr>
                 </tbody>
             </table>
+            {% else %}
+                <div class="col-4 offset-4 text-center">
+                    <a href="#" class="btn btn-block btn-secondary btn-lg" id="btnInstallVenom"><i class="fa fa-plus fa-sm pt-1"></i>&nbsp;{{ "Install Venom Coding"|xlt }}</a>
+                </div>
             {% endif %}
-        </div>
-        <div class="col-4 offset-4 text-center">
-            {% if installAllowed %}
-                <a href="#" class="btn btn-block btn-secondary btn-lg" id="btnInstallVenom"><i class="fa fa-plus fa-sm pt-1"></i>&nbsp;{{ "Install Venom Coding"|xlt }}</a>
-            {% endif %}
-
         </div>
     </div>
 </div>
